examples/test/testpolicy5406.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy5406
  namespace: namespace248
spec:
  podSelector:
    matchLabels:
      key13: value8
      key27: value25
      key12: value41
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key13: value29
          key48: value45
      podSelector:
        matchLabels:
          key18: value35
          key29: value26
          key42: value28
